--- a/src/create_sqlalchemy_app/templates/scripts/generate_erd.py.jinja2
+++ b/src/create_sqlalchemy_app/templates/scripts/generate_erd.py.jinja2
@@ -1,4 +1,4 @@
-#!/usr/bin/env python3
+{% raw %}#!/usr/bin/env python3
 """
 ERD (Entity Relationship Diagram) Generator
 
@@ -258,3 +258,4 @@ def main():
 
 if __name__ == "__main__":
     main()
+{% endraw %}
